# eventstream-parser

./: Cargo.toml
src/: event.rs  event_stream.rs  lib.rs  parser.rs  utf8_stream.rs
