[package]
name = "eventstream"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["futures-core/std", "nom/std"]

[dependencies]
nom = { version = "7.1", default-features = false }
futures-core = { version = "0.3", default-features = false }
pin-project = "1.0.10"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
futures = "0.3"
